WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102520
[WK2] REGRESSION: After web process crash a new web process is created for every existing page
https://bugs.webkit.org/show_bug.cgi?id=102520
Summary
[WK2] REGRESSION: After web process crash a new web process is created for ev...
Carlos Garcia Campos
Reported
2012-11-16 08:18:23 PST
Even when process model is SharedSecondaryProcess
Attachments
Patch
(3.45 KB, patch)
2012-11-16 08:22 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Updated patch
(5.45 KB, patch)
2012-11-17 02:38 PST
,
Carlos Garcia Campos
ap
: review+
ap
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2012-11-16 08:22:22 PST
Created
attachment 174691
[details]
Patch
Alexey Proskuryakov
Comment 2
2012-11-16 10:11:19 PST
Comment on
attachment 174691
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=174691&action=review
Great catch!
> Source/WebKit2/UIProcess/WebContext.h:223 > + PassRefPtr<WebProcessProxy> ensureWebProcess();
This function is quite confusing - there is no way one could figure out what it does without reading its code. I could not come up with a better name or signature for it. Perhaps the logic can just be in WebPageProxy::reattachToWebProcess() inline?
Carlos Garcia Campos
Comment 3
2012-11-17 02:11:17 PST
(In reply to
comment #2
)
> (From update of
attachment 174691
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=174691&action=review
> > Great catch! > > > Source/WebKit2/UIProcess/WebContext.h:223 > > + PassRefPtr<WebProcessProxy> ensureWebProcess(); > > This function is quite confusing - there is no way one could figure out what it does without reading its code. > > I could not come up with a better name or signature for it. Perhaps the logic can just be in WebPageProxy::reattachToWebProcess() inline?
We would still need a way to get the shared process, because ensureSharedWebProcess() doesn't return the process and relaunchProcessIfNecessary is deprecated, right?
Carlos Garcia Campos
Comment 4
2012-11-17 02:38:12 PST
Created
attachment 174816
[details]
Updated patch Move the logic to WebPageProxy::reattachToWebProcess()
Alexey Proskuryakov
Comment 5
2012-11-17 21:09:49 PST
Comment on
attachment 174816
[details]
Updated patch View in context:
https://bugs.webkit.org/attachment.cgi?id=174816&action=review
> Source/WebKit2/UIProcess/WebContext.h:221 > + PassRefPtr<WebProcessProxy> getOrCreateSharedWebProcess();
I think that this should still be called ensureSharedWebProcess, and return a plain pointer. There is no passing of ownership, so PassRefPtr is confusing.
Carlos Garcia Campos
Comment 6
2012-11-18 03:19:28 PST
Committed
r135066
: <
http://trac.webkit.org/changeset/135066
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug