Source/WebKit2/UIProcess/WebContext.h
@@ -116,8 +116,6 @@ public:
 
     PassRefPtr<WebPageProxy> createWebPage(PageClient*, WebPageGroup*, WebPageProxy* relatedPage = 0);
 
-    WebProcessProxy* relaunchProcessIfNecessary();
-
     const String& injectedBundlePath() const { return m_injectedBundlePath; }
 
     DownloadProxy* download(WebPageProxy* initiatingPage, const WebCore::ResourceRequest&);
@@ -220,7 +218,7 @@ public:
     void setDiskCacheDirectory(const String& dir) { m_overrideDiskCacheDirectory = dir; }
     void setCookieStorageDirectory(const String& dir) { m_overrideCookieStorageDirectory = dir; }
 
-    void ensureSharedWebProcess();
+    WebProcessProxy* ensureSharedWebProcess();
     PassRefPtr<WebProcessProxy> createNewWebProcess();
     void warmInitialProcess();
 
@@ -425,7 +423,7 @@ template<typename U> void WebContext::sendToAllProcessesRelaunchingThemIfNecessa
 {
 // FIXME (Multi-WebProcess): WebContext doesn't track processes that have exited, so it cannot relaunch these. Perhaps this functionality won't be needed in this mode.
     if (m_processModel == ProcessModelSharedSecondaryProcess)
-        relaunchProcessIfNecessary();
+        ensureSharedWebProcess();
     sendToAllProcesses(message);
 }
 
